# basics_of_programming

./: CMakeLists.txt  README.md  main.c
laboratory_work_1/: laboratory_work_1.c  laboratory_work_1.h
laboratory_work_10/: laboratory_work_10.c
laboratory_work_11/: laboratory_work_11.c  laboratory_work_11.h
laboratory_work_12/: laboratory_work_12.c  laboratory_work_12.h
laboratory_work_14/: laboratory_work_14.c  laboratory_work_14.h
laboratory_work_2/: laboratory_work_2.c  laboratory_work_2.h
laboratory_work_3/: laboratory_work_3.c  laboratory_work_3.h
laboratory_work_4/: laboratory_work_4.c  laboratory_work_4.h
laboratory_work_5/: laboratory_work_5.c  laboratory_work_5.h
laboratory_work_6/: laboratory_work_6.c  laboratory_work_6.h
laboratory_work_7/: laboratory_work_7.c  laboratory_work_7.h
laboratory_work_8/: laboratory_work_8.c  laboratory_work_8.h
laboratory_work_9/: laboratory_work_9.c  laboratory_work_9.h
labpratory_work_10/: laboratory_work_10.h
matrix/: matrix.c  matrix.h
searches/: searches.c  searches.h
sorting/: sorting.c  sorting.h
standart_function/: standart_function.c  standart_function.h
str/: str.c  str.h
test_matrix/: test_matrix.c  test_matrix.h
