cmake_minimum_required(VERSION 3.25)
project(basics_of_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(basics_of_programming main.c laboratory_work_1/laboratory_work_1.c
        laboratory_work_1/laboratory_work_1.h laboratory_work_2/laboratory_work_2.c
        laboratory_work_2/laboratory_work_2.h standart_function/standart_function.c
        standart_function/standart_function.h laboratory_work_3/laboratory_work_3.c
        laboratory_work_3/laboratory_work_3.h laboratory_work_4/laboratory_work_4.c
        laboratory_work_4/laboratory_work_4.h laboratory_work_5/laboratory_work_5.c
        laboratory_work_5/laboratory_work_5.h laboratory_work_6/laboratory_work_6.c
        laboratory_work_6/laboratory_work_6.h laboratory_work_7/laboratory_work_7.c
        laboratory_work_7/laboratory_work_7.h laboratory_work_8/laboratory_work_8.c
        laboratory_work_8/laboratory_work_8.h laboratory_work_9/laboratory_work_9.c
        laboratory_work_9/laboratory_work_9.h sorting/sorting.c sorting/sorting.h
        laboratory_work_10/laboratory_work_10.c laboratory_work_10/laboratory_work_10.h
        laboratory_work_11/laboratory_work_11.c laboratory_work_11/laboratory_work_11.h
        laboratory_work_12/laboratory_work_12.c laboratory_work_12/laboratory_work_12.h
        searches/searches.c searches/searches.h matrix/matrix.c matrix/matrix.h test_matrix/test_matrix.c test_matrix/test_matrix.h str/str.c str/str.h)
